# SDL-mini-Project

./: CMakeLists.txt
src/: CMakeLists.txt  Source.cpp
